# -String-searching-Knuth-Morris-Pratt-pattern-matcher

./: CMakeLists.txt  README.md  main.cpp
